--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,6 +31,14 @@ jobs:
     runs-on: self-hosted
     needs: ci
     steps:
+
+      - name: argocd cli installation
+        shell: bash
+        run: |
+          curl -ksSL -o argocd https://argocd-server.argocd/download/argocd-linux-amd64
+          chmod +x argocd
+          sudo mv ./argocd /usr/local/bin/argocd
+
       - name: argocd app sync
         shell: bash
         run: |
