--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Set short commit SHA
         id: vars
-        run: echo "SHORT_SHA=${GITHUB_SHA::6}" >> $GITHUB_ENV
+        run: echo "COMMIT_ID=${GITHUB_SHA::6}" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -25,12 +25,33 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: vinay199/python-app:${{ env.SHORT_SHA }}
+          tags: vinay199/python-app:${{ env.COMMIT_ID }}
+
+    outputs:
+      COMMIT_ID: ${{ env.COMMIT_ID }}
 
   cd:
     runs-on: self-hosted
     needs: ci
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      # - name: modify helm values.yaml with new image tag
+      #   shell: bash
+      #   run: |
+      #     sed -i 's|^  tag: .*|  tag: '${{ needs.ci.outputs.COMMIT_ID }}'|' python-app/charts/python-app/values.yaml
+
+      - name: modify helm values.yaml with new image tag
+        shell: bash
+        run: |
+          echo ${{ needs.ci.outputs.COMMIT_ID }}
+          pip install yq
+          yq -Yi '.image.tag = "${{ needs.ci.outputs.COMMIT_ID }}"' charts/python-app/values.yaml
+
+      - name: commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: Update image tag to ${{ needs.ci.outputs.COMMIT_ID }}
 
       - name: argocd cli installation
         shell: bash
