Update image tag to fa0b81

--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 image:
   repository: vinay199/python-app
   pullPolicy: IfNotPresent
-  tag: v2
+  tag: fa0b81
 
 imagePullSecrets: []
 # This is to override the chart name.
