--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 'python-app Documentation'
+site_name: 'python-app'
 site_description: 'Main documentation for python-app'
 repo_url: https://github.com/vinaysingh19/python-app
 edit_uri: edit/main/docs
