--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,10 @@
-site_name: 'python-app'
-site_description: 'Main documentation for python-app'
+site_name: python-app
+site_description: Main documentation for python-app
 repo_url: https://github.com/vinaysingh19/python-app
 edit_uri: edit/main/docs
 
 plugins:
   - techdocs-core
 
-
-# For sidebar navigation on https://backstage.io/, see `microsite/sidebars.js`
 nav:
-  - Overview:
-      - What is python-app?: 'index.md'
+  - Home: index.md
